<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">手机互联</string>
    <string name="carlink_decs">OPPO、vivo、小米手机专享</string>
    <string name="init_sdk_failed">启动车机投屏失败，请稍后再试！</string>
    <string name="initializing">初始化中，请等待！</string>
    <string name="pin_code_hint">PIN 码： </string>
    <string name="device_name">设备名： </string>
    <string name="connect_failed">连接失败，您可以尝试以下方法恢复</string>
    <string name="wireless_reconnect_method">• 点击重连按钮，重新进行连接</string>
    <string name="usb_reconnect_method">• 如果使用USB连接，请检测USB线是否松动，尝试重新插拔连接</string>
    <string name="need_user_intervention_method">• 请检测手机端是否存在连接弹窗未确认，确认后将继续连接</string>
    <string name="unsupport_wireless_method">• 当前手机或者车机可能不支持无线连接，请插入USB线进行连接</string>
    <string name="restart_car_method">• 熄火后，重启车机系统后重新进行连接</string>
    <string name="reconnect">重连</string>
    <string name="cancel">取消</string>
    <string name="carLink">ICCOA CarLink车机互联助手</string>
    <string name="usb_usb_hint">usb投屏已配置\n请连接USB进行投屏</string>
    <string name="ucar_wifi_hint">WIFI无线投屏</string>
    <string name="hint">提示</string>
    <string name="exit">退出</string>
    <string name="wifi_connect_hint">请将手机开启蓝牙靠近中控，发现连接弹窗后输入PIN码进行连接验证。</string>
    <string name="connect_phone">连接手机</string>

    <!--    hicar-->
    <!--    <string name="app_name">HiCar</string>-->
    <string name="huawei_decs">华为手机专享</string>
    <string name="huawei_hicar_code_text">HUAWEI HiCar 连接码</string>
    <string name="huawei_hicar_ap_tips">手机开启蓝牙靠近中控，发现汽车后输入连接码，进行首次验证。你也可以通过USB线连接你的手机。</string>
    <string name="huawei_hicar_usb_tips">请使用USB线连接手机和车机</string>
    <string name="huawei_hicar_usb_cancel">取消</string>
    <string name="huawei_hicar_usb_connect_reset">重连</string>
    <string name="huawei_hicar_usb_ref">刷新</string>
    <string name="huawei_hicar_usb_connect_help">连接帮助</string>
    <string name="huawei_hicar_usb_connect_failed_title_tips">连接失败原因可能如下</string>
    <string name="huawei_hicar_usb_connect_failed_contont_tips">一.检查USB连线是否松动，请重新连接\n 二.检查华为手机的版本是否支持Hicar，请更新EMUI版本后重试升级步骤：
        点击【设置】> 【系统更新】,检测是否有新版本，点击新版本下载软件升级包，根据提示进行升级</string>
    <string name="huawei_hicar_ap_connecting">正在连接 <xliff:g id="name">%1$s</xliff:g></string>
    <string name="huawei_hicar_connect_failed_title">链接<xliff:g id="name">%1$s</xliff:g>失败，您可以尝试以下方法恢复 </string>
    <string name="huawei_hicar_connect_failed_content1">请排查您的USB连线是否松动，重新插拔链接 </string>
    <string name="huawei_hicar_connect_failed_content2">熄火后，尝试重启车机系统，重新链接 </string>
    <string name="huawei_hicar_init_failed_title">连接初始化失败，您可以尝试以下方法恢复 </string>
    <string name="huawei_hicar_init_failed_content1">点击重连按钮，重新进行连接 </string>
    <string name="huawei_hicar_init_failed_content2">熄火后，尝试重启车机系统，重新链接 </string>
    <string name="huawei_hicar_bt_open">蓝牙开启中... </string>
    <string name="huawei_hicar_bt_tips">HUAWEI HiCar连接过程中需要使用蓝牙</string>


    <string name="title_wu_tong">TINNOVE T-Link</string>
    <string name="title_sub_wu_tong">多形态切换，畅享手车空间互融</string>
    <string name="title_hua_wei">HUAWEI HiCar</string>
    <string name="title_sub_hua_wei">华为手机专享</string>
    <string name="title_car_link">ICCOA Carlink</string>
    <string name="title_sub_car_link">OPPO、VIVO、小米手机专享</string>
    <string name="title_honor_link">荣耀智慧互联</string>
    <string name="title_sub_honor_link">荣耀手机专享</string>
</resources>
