<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/colorBlack"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/hicar_usb_connect_help_back_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_background"/>

    <TextView
        android:id="@+id/hicar_usb_connect_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hicar_usb_connect_help_back_img"
        android:layout_toRightOf="@id/hicar_usb_connect_help_back_img"
        android:text="@string/huawei_hicar_usb_connect_help"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/hicar_code_tips_size"/>

    <TextView
        android:id="@+id/hicar_usb_connect_title_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hicar_usb_connect_cancel"
        android:layout_centerHorizontal="true"
        android:text="@string/huawei_hicar_usb_connect_failed_title_tips"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/hicar_code_tips_size"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hicar_usb_connect_title_tips"
        android:text="@string/huawei_hicar_usb_connect_failed_contont_tips"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/hicar_code_tips_size"
        />

</RelativeLayout>
