<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingVertical="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.wt.phonelink.carlink.widget.UCarAutoScaleTextView
            android:id="@+id/tv_dialog_icon_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_failed"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:widthPercent=".48"
            tools:ignore="MissingClass" />

        <com.wt.phonelink.carlink.widget.UCarAutoScaleTextView
            android:id="@+id/tv_dialog_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="2dp"
            android:textColor="#F0F0F0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dialog_icon_title"
            app:widthPercent=".45" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_vertical_line_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".48" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_vertical_line_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".52" />

        <com.wt.phonelink.carlink.widget.UCarAutoScaleTextView
            android:id="@+id/tv_dialog_done"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_bg_aero_button"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:text="@string/reconnect"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/gd_vertical_line_one"
            app:layout_constraintTop_toBottomOf="@+id/tv_dialog_message"
            app:widthPercent=".04" />


        <com.wt.phonelink.carlink.widget.UCarAutoScaleTextView
            android:id="@+id/tv_dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_bg_aero_button"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            app:layout_constraintLeft_toRightOf="@+id/gd_vertical_line_two"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dialog_message"
            app:widthPercent=".04" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
